--- a/csgdsr/dsr/templates/dsr/registration/password_reset_complete.html
+++ b/csgdsr/dsr/templates/dsr/registration/password_reset_complete.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container mt-5">
+<div class="container min-vh-100 d-flex align-items-center justify-content-center">
+  <div class="col-sm-6 mx-auto">
   <div class="alert alert-success text-center shadow-sm">
     <h4 class="mb-3">✅ Password Changed Successfully!</h4>
     <p>You can now <a href="{% url 'home' %}">login</a> with your new password.</p>
   </div>
+  <div>
 </div>
   {% endblock %}
