--- a/csgdsr/dsr/templates/dsr/registration/password_reset_confirm.html
+++ b/csgdsr/dsr/templates/dsr/registration/password_reset_confirm.html
@@ -1,6 +1,7 @@
 {% extends 'dsr/base.html' %}
 {% block content %}
-<div class="container mt-5">
+<div class="container min-vh-100 d-flex align-items-center justify-content-center">
+  <div class="col-sm-6 mx-auto">
   <div class="card p-4 shadow-sm">
     <h4 class="mb-3 text-center">🔐 Set a New Password</h4>
     <form method="POST">
@@ -16,6 +17,7 @@
       {% endfor %}
       <button type="submit" class="btn btn-success w-100">Reset Password</button>
     </form>
+  </div>
   </div>
 </div>
 
