--- a/csgdsr/dsr/templates/dsr/registration/password_reset.html
+++ b/csgdsr/dsr/templates/dsr/registration/password_reset.html
@@ -3,7 +3,9 @@
 {% load static %}
 {% load widget_tweaks %}
 {% block content %}
-<div class="container mt-5">
+
+<div class="container min-vh-100 d-flex align-items-center justify-content-center ">
+  <div class="col-sm-6 mx-auto">
   <div class="card shadow-sm p-4">
     <h3 class="mb-3 text-center">Forgot Your Password?</h3>
     <form method="POST">
@@ -17,6 +19,7 @@
       </div>
       <button type="submit" class="btn btn-primary w-100">Send Reset Link</button>
     </form>
+  </div>
   </div>
 </div>
 {% endblock %}
