added update user

--- a/csgdsr/dsr/templates/dsr/user/user_page.html
+++ b/csgdsr/dsr/templates/dsr/user/user_page.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
   {% comment %} Sidebar  {% endcomment %}
-  {% include 'dsr/user_sidebar.html' %}
+  {% include 'dsr/user/user_sidebar.html' %}
   {% comment %} content  {% endcomment %}
   <div style="margin-left: 250px; padding: 15px; overflow-y: auto;">
     {% block usercontent %} {% endblock %}
