--- a/csgdsr/dsr/templates/dsr/user/user_sidebar.html
+++ b/csgdsr/dsr/templates/dsr/user/user_sidebar.html
@@ -16,51 +16,51 @@
         </a>
       </li>
        <li>
-        <a href="{% url 'csg_forms' %}" class="nav-link d-flex align-items-center {% if request.resolver_match.url_name == 'csg_forms' %}active{% else %}text-white{% endif %}">
+        <a href="" class="nav-link d-flex align-items-center {% if request.resolver_match.url_name == '' %}active{% else %}text-white{% endif %}">
           <i class="bi bi-grid"></i>
           <span class="ms-2">Forms</span>
         </a>
       </li>
       <li>
-        <a href="{% url 'cases_registered' %}" class="nav-link d-flex align-items-center {% if request.resolver_match.url_name == 'cases_registered' %}active{% else %}text-white{% endif %}">
+        <a href="" class="nav-link d-flex align-items-center {% if request.resolver_match.url_name == '' %}active{% else %}text-white{% endif %}">
           <i class="bi bi-grid"></i>
           <span class="ms-2">Cases Registerd</span>
         </a>
       </li>
       <li>
-        <a href="{% url 'rescue_seizure' %}" class="nav-link d-flex align-items-center {% if request.resolver_match.url_name == 'rescue_seizure' %}active{% else %}text-white{% endif %}">
+        <a href="" class="nav-link d-flex align-items-center {% if request.resolver_match.url_name == '' %}active{% else %}text-white{% endif %}">
           <i class="bi bi-table"></i>
-          <span class="ms-2">Rescue  {{ &amp }} Seizure </span>
+          <span class="ms-2">Rescue  & Seizure </span>
         </a>
       </li>
       <li>
-        <a href="{% url 'forecast' %}" class="nav-link d-flex align-items-center {% if request.resolver_match.url_name == 'forecast' %}active{% else %}text-white{% endif %}">
+        <a href="" class="nav-link d-flex align-items-center {% if request.resolver_match.url_name == '' %}active{% else %}text-white{% endif %}">
           <i class="bi bi-table"></i>
           <span class="ms-2">Forecast</span>
         </a>
       </li>
       <li>
-        <a href="{% url 'fishermen_attack_arrest' %}" class="nav-link d-flex align-items-center {% if request.resolver_match.url_name == 'fishermen_attack_arrest' %}active{% else %}text-white{% endif %}">
+        <a href="" class="nav-link d-flex align-items-center {% if request.resolver_match.url_name == '' %}active{% else %}text-white{% endif %}">
           <i class="bi bi-table"></i>
-          <span class="ms-2">Fishermen attack {{ &amp }} arrest </span>
+          <span class="ms-2">Fishermen attack & arrest </span>
         </a>
       </li>
       <li>
-        <a href="{% url 'vehicle_status' %}" class="nav-link d-flex align-items-center {% if request.resolver_match.url_name == 'vehicle_status' %}active{% else %}text-white{% endif %}">
+        <a href="" class="nav-link d-flex align-items-center {% if request.resolver_match.url_name == '' %}active{% else %}text-white{% endif %}">
           <i class="bi bi-table"></i>
           <span class="ms-2">Vehicle Status</span>
         </a>
       </li>
       <li>
-        <a href="{% url 'vvc_beat_proforma' %}" class="nav-link d-flex align-items-center {% if request.resolver_match.url_name == 'vvc_beat_proforma' %}active{% else %}text-white{% endif %}">
+        <a href="" class="nav-link d-flex align-items-center {% if request.resolver_match.url_name == '' %}active{% else %}text-white{% endif %}">
           <i class="bi bi-table"></i>
-          <span class="ms-2">VVC, Beat {{ &amp }} Proforma</span>
+          <span class="ms-2">VVC, Beat & Proforma</span>
         </a>
       </li>
       <li>
-        <a href="{% url 'patrol_vcheck' %}" class="nav-link d-flex align-items-center {% if request.resolver_match.url_name == 'patrol_vcheck' %}active{% else %}text-white{% endif %}">
+        <a href="" class="nav-link d-flex align-items-center {% if request.resolver_match.url_name == '' %}active{% else %}text-white{% endif %}">
           <i class="bi bi-table"></i>
-          <span class="ms-2">Patrol {{ &amp }} Vehicle Check</span>
+          <span class="ms-2">Patrol & Vehicle Check</span>
         </a>
       </li>
     </ul>
