--- a/csgdsr/dsr/templates/dsr/user/user_page.html
+++ b/csgdsr/dsr/templates/dsr/user/user_page.html
@@ -1,11 +1,47 @@
-{% extends 'dsr/base.html' %}
-{% load static %}
-{% block content %}
-  {% comment %} Sidebar  {% endcomment %}
-  {% include 'dsr/user/user_sidebar.html' %}
-  {% comment %} content  {% endcomment %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{% block title %}CSG DSR{% endblock %}</title>
+
+  {# Bootstrap CSS #}
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+
+  {# Bootstrap Icons #}
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+
+  {# Custom CSS #}
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'dsr/css/style.css' %}">
+</head>
+<body>
+
+{% include 'dsr/user/user_sidebar.html' %}
   <div style="margin-left: 250px; padding: 15px; overflow-y: auto;">
-    {% block usercontent %} {% endblock %}
+    {% block usercontent %} 
+    
+    {% endblock %}
     <!-- Dynamic content from views will be injected here -->
   </div>
-{% endblock %}
+
+
+
+  {# Bootstrap JS #}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+
+  {# Custom JS #}
+  <script src="{% static 'dsr/script/main.js' %}"></script>
+
+
+</body>
+</html>
+
+
+
+
+
+
+
+
+
