--- a/csgdsr/dsr/templates/dsr/user/user_sidebar.html
+++ b/csgdsr/dsr/templates/dsr/user/user_sidebar.html
@@ -32,37 +32,37 @@
         </a>
         <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
           <li>
-            <a class="dropdown-item d-flex align-items-center" href="{% url 'register_case_form' %}">
+            <a class="dropdown-item d-flex align-items-center" href="{% url 'cases_registered_summary' %}">
               <i class="bi bi-journal-text me-2"></i> Cases Registered
             </a>
           </li>
           <li>
-            <a class="dropdown-item d-flex align-items-center" href="{% url 'rescue_seizure_form' %}">
+            <a class="dropdown-item d-flex align-items-center" href="{% url 'rescue_seizure_summary' %}">
               <i class="bi bi-shield-plus me-2"></i> Rescue & Seizure
             </a>
           </li>
           <li>
-            <a class="dropdown-item d-flex align-items-center" href="{% url 'forecast_form' %}">
+            <a class="dropdown-item d-flex align-items-center" href="{% url 'forecast_summary' %}">
               <i class="bi bi-cloud-sun me-2"></i> Forecast
             </a>
           </li>
           <li>
-            <a class="dropdown-item d-flex align-items-center" href="{% url 'fishermen_attack_arrest_form' %}">
+            <a class="dropdown-item d-flex align-items-center" href="{% url 'fishermen_attack_arrest_summary' %}">
               <i class="bi bi-people-fill me-2"></i> Fishermen Attack & Arrest
             </a>
           </li>
           <li>
-            <a class="dropdown-item d-flex align-items-center" href="{% url 'vehicle_status_form' %}">
+            <a class="dropdown-item d-flex align-items-center" href="{% url 'vehicle_status_summary' %}">
               <i class="bi bi-truck-front me-2"></i> Vehicle Status
             </a>
           </li>
           <li>
-            <a class="dropdown-item d-flex align-items-center" href="{% url 'vvc_beat_proforma_form' %}">
+            <a class="dropdown-item d-flex align-items-center" href="{% url 'vvc_beat_proforma_summary' %}">
               <i class="bi bi-clipboard-data me-2"></i> VVC, Beat & Proforma
             </a>
           </li>
           <li>
-            <a class="dropdown-item d-flex align-items-center" href="{% url 'patrol_vehicle_check_form' %}">
+            <a class="dropdown-item d-flex align-items-center" href="{% url 'patrol_vehicle_check_summary' %}">
               <i class="bi bi-search me-2"></i> Patrol & Vehicle Check
             </a>
           </li>
