--- a/csgdsr/dsr/templates/dsr/user/user_page.html
+++ b/csgdsr/dsr/templates/dsr/user/user_page.html
@@ -11,6 +11,8 @@
   {# Bootstrap Icons #}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
   {# Custom CSS #}
   {% load static %}
   <link rel="stylesheet" href="{% static 'dsr/css/style.css' %}">
