--- a/csgdsr/dsr/templates/dsr/registration/password_reset_confirm.html
+++ b/csgdsr/dsr/templates/dsr/registration/password_reset_confirm.html
@@ -4,7 +4,7 @@
   <div class="col-sm-6 mx-auto">
   <div class="card p-4 shadow-sm">
     <h4 class="mb-3 text-center">🔐 Set a New Password</h4>
-    <form method="POST">
+    <form method="POST" novalidate>
       {% csrf_token %}
       {% for field in form %}
         <div class="mb-3">
