--- a/csgdsr/dsr/templates/dsr/user/user_sidebar.html
+++ b/csgdsr/dsr/templates/dsr/user/user_sidebar.html
@@ -32,7 +32,7 @@
         </a>
         <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
           <li>
-            <a class="dropdown-item d-flex align-items-center" href="{% url 'cases_registered_summary' %}">
+            <a class="dropdown-item d-flex align-items-center" href="{% url 'cases_summary' %}">
               <i class="bi bi-journal-text me-2"></i> Cases Registered
             </a>
           </li>
