--- a/csgdsr/dsr/templates/dsr/base.html
+++ b/csgdsr/dsr/templates/dsr/base.html
@@ -27,5 +27,26 @@
   <script src="{% static 'dsr/script/main.js' %}"></script>
 
   {% block extra_js %}{% endblock %}
+    <script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (() => {
+      'use strict'
+
+      // Fetch all the forms we want to apply custom Bootstrap validation styles to
+      const forms = document.querySelectorAll('.needs-validation')
+
+      // Loop over them and prevent submission
+      Array.from(forms).forEach(form => {
+        form.addEventListener('submit', event => {
+          if (!form.checkValidity()) {
+            event.preventDefault()
+            event.stopPropagation()
+          }
+
+          form.classList.add('was-validated')
+        }, false)
+      })
+    })()
+  </script>
 </body>
 </html>
