--- a/csgdsr/dsr/templates/dsr/registration/password_change.html
+++ b/csgdsr/dsr/templates/dsr/registration/password_change.html
@@ -7,7 +7,7 @@
   <div class="col-sm-6 mx-auto">
     <div class="card shadow-sm p-4">
       <h3 class="mb-3 text-center">🔐 Change Your Password</h3>
-      <form method="POST">
+      <form method="POST" novalidate>
         {% csrf_token %}
         {% for field in form %}
           <div class="mb-3">
