--- a/csgdsr/dsr/templates/dsr/registration/password_reset.html
+++ b/csgdsr/dsr/templates/dsr/registration/password_reset.html
@@ -8,7 +8,7 @@
   <div class="col-sm-6 mx-auto">
   <div class="card shadow-sm p-4">
     <h3 class="mb-3 text-center">Forgot Your Password?</h3>
-    <form method="POST">
+    <form method="POST" novalidate>
       {% csrf_token %}
       <div class="mb-3">
         <label for="id_email" class="form-label">Enter your email address</label>
