--- a/csgdsr/dsr/templates/dsr/registration/update_user.html
+++ b/csgdsr/dsr/templates/dsr/registration/update_user.html
@@ -7,7 +7,7 @@
   <div class="col-sm-6 mx-auto">
     <div class="card shadow-sm p-4">
       <h3 class="mb-3 text-center">Update Your Account</h3>
-      <form method="POST">
+      <form method="POST" novalidate>
         {% csrf_token %}
         
         <div class="mb-3">
