--- a/csgdsr/dsr/templates/dsr/signup.html
+++ b/csgdsr/dsr/templates/dsr/signup.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container mt-5">
     <h2 class="mb-4">Sign Up</h2>
-    <form method="post">
+    <form method="post" novalidate>
         {% csrf_token %}
         {{ form|crispy }}
         <button type="submit" class="btn btn-primary">Register</button>
