--- a/csgdsr/dsr/templates/dsr/user/user_page.html
+++ b/csgdsr/dsr/templates/dsr/user/user_page.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}CSG DSR{% endblock %}</title>
 
+
+  {% load static %}
+
+
   {# Bootstrap CSS #}
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 
@@ -20,6 +24,9 @@
 <body>
 
 {% include 'dsr/user/user_sidebar.html' %}
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
+
   <div style="margin-left: 250px; padding: 15px; overflow-y: auto;">
     {% block usercontent %} 
     
@@ -34,7 +41,27 @@
 
   {# Custom JS #}
   <script src="{% static 'dsr/script/main.js' %}"></script>
+    <script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (() => {
+      'use strict'
 
+      // Fetch all the forms we want to apply custom Bootstrap validation styles to
+      const forms = document.querySelectorAll('.needs-validation')
+
+      // Loop over them and prevent submission
+      Array.from(forms).forEach(form => {
+        form.addEventListener('submit', event => {
+          if (!form.checkValidity()) {
+            event.preventDefault()
+            event.stopPropagation()
+          }
+
+          form.classList.add('was-validated')
+        }, false)
+      })
+    })()
+  </script>
 
 </body>
 </html>
