--- a/csgdsr/dsr/templates/dsr/user/forms/194bnss_missing_form.html
+++ b/csgdsr/dsr/templates/dsr/user/forms/194bnss_missing_form.html
@@ -66,13 +66,7 @@
       </div>
     </div>
 
-     <div class="mb-3">
-      <label for="{{ form.io.id_for_label }}" class="form-label">Investigating Officer</label>
-      {{ form.io }}
-      {% for error in form.io.errors %}
-        <div class="invalid-feedback d-block">{{ error }}</div>
-      {% endfor %}
-    </div>
+    
     <div class="row mb-3">
       <div class="col-md-6">
         <label for="{{ form.place_of_occurrence.id_for_label }}" class="form-label">Place of Occurrence</label>
@@ -86,6 +80,14 @@
         <label for="{{ form.petitioner.id_for_label }}" class="form-label">Petitioner</label>
         {{ form.petitioner }}
         {% for error in form.petitioner.errors %}
+          <div class="invalid-feedback d-block">{{ error }}</div>
+        {% endfor %}
+      </div>
+
+      <div class="mb-3 col-md-6">
+        <label for="{{ form.diseased.id_for_label }}" class="form-label">Diseased</label>
+        {{ form.diseased }}
+        {% for error in form.diseased.errors %}
           <div class="invalid-feedback d-block">{{ error }}</div>
         {% endfor %}
       </div>
@@ -121,17 +123,5 @@
   </form>
 </div>
 
-{% comment %} <script>
-  function toggleFields() {
-    const category = document.getElementById("id_case_category").value;
-    document.getElementById("diseased-field").style.display = category === "194 BNSS" ? "block" : "none";
-    document.getElementById("missing-person-field").style.display = category === "Missing" ? "block" : "none";
-  }
 
-  document.addEventListener("DOMContentLoaded", function() {
-    const categoryField = document.getElementById("id_case_category");
-    categoryField.addEventListener("change", toggleFields);
-    toggleFields();  // Trigger on page load
-  });
-</script> {% endcomment %}
 {% endblock %}
